--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Chen - Aspiring Data Analyst</title>
+    <title>SUDHANSHU RAI - Aspiring Data Analyst</title>
     <meta name="description" content="Alex Chen - Aspiring Data Analyst turning data into decisions with Python, SQL, and Tableau">
     <meta property="og:title" content="Alex Chen - Data Analyst Portfolio">
     <meta property="og:description" content="Turning data into decisions with Python, SQL, and Tableau">
@@ -598,7 +598,7 @@
             <div class="hero-avatar">
                 <i class="fas fa-chart-line"></i>
             </div>
-            <h1>Alex Chen</h1>
+            <h1>SUDHASHU RAI</h1>
             <p>Aspiring Data Analyst | Data Science Enthusiast</p>
             <div class="hero-tagline">Turning data into decisions with Python, SQL, and Tableau</div>
             <div class="cta-buttons">
